--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -159,18 +159,22 @@
   "@backupSettingGroup": {},
   "developerOptionsSettingGroup": "Developer Options",
   "@developerOptionsSettingGroup": {},
-  "showIstantAlarmButtonSetting": "Show Instant Alarm Button",
+  "showIstantAlarmButtonSetting": "Show instant alarm button",
   "@showIstantAlarmButtonSetting": {},
-  "showIstantTimerButtonSetting": "Show Instant Timer Button",
+  "showIstantTimerButtonSetting": "Show instant timer button",
   "@showIstantTimerButtonSetting": {},
   "logsSettingGroup": "Logs",
   "@logsSettingGroup": {},
-  "maxLogsSetting": "Max Logs",
+  "maxLogsSetting": "Max alarm logs",
   "@maxLogsSetting": {},
-  "alarmLogSetting": "Alarm Logs",
+  "alarmLogSetting": "Alarm logs",
   "@alarmLogSetting": {},
-  "saveLogs": "Save Logs",
+  "saveLogs": "Save logs",
   "@saveLogs": {},
+  "showErrorSnackbars": "Show error snackbars",
+  "@showErrorSnackbars": {},
+  "clearLogs": "Clear logs",
+  "@clearLogs": {},
   "aboutSettingGroup": "About",
   "@aboutSettingGroup": {},
   "restoreSettingGroup": "Restore default values",
