Add option to start alarm at random position

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -293,6 +293,10 @@
   "@settingGroupMore": {},
   "melodySetting": "Melody",
   "@melodySetting": {},
+  "startMelodyAtRandomPos": "Random position",
+  "@startMelodyAtRandomPos": {},
+  "startMelodyAtRandomPosDescription": "Melody will start at a random position",
+  "@startMelodyAtRandomPosDescription": {},
   "vibrationSetting": "Vibration",
   "@vibrationSetting": {},
   "audioChannelSetting": "Audio Channel",
