Add option to shuffle emlodies

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -467,10 +467,20 @@
   "@disableAllFilteredAlarmsAction": {},
   "skipAllFilteredAlarmsAction": "Skip all filtered alarms",
   "@skipAllFilteredAlarmsAction": {},
+  "shuffleAlarmMelodiesAction": "Shuffle melodies for all filtered alarms",
+  "@shuffleAlarmMelodiesAction":{},
   "cancelSkipAllFilteredAlarmsAction": "Cancel skip all filtered alarms",
   "@cancelSkipAllFilteredAlarmsAction": {},
   "deleteAllFilteredAction": "Delete all filtered items",
   "@deleteAllFilteredAction": {},
+  "resetAllFilteredTimersAction": "Reset all filtered timers",
+  "@resetAllFilteredTimersAction": {},
+  "playAllFilteredTimersAction": "Play all filtered timers",
+  "@playAllFilteredTimersAction": {},
+  "pauseAllFilteredTimersAction": "Pause all filtered timers",
+  "@pauseAllFilteredTimersAction": {},
+  "shuffleTimerMelodiesAction": "Shuffle melodies for all filtered timers",
+  "@shuffleTimerMelodiesAction": {},
   "skippingDescriptionSuffix": "(skipping next occurrence)",
   "@skippingDescriptionSuffix": {},
   "alarmDescriptionSnooze": "Snoozed until {date}",
