--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -752,5 +752,23 @@
   "notificationPermissionDescription": "Allow notifications to be showed",
   "@notificationPermissionDescription": {},
   "extraAnimationSettingDescription": "Show animations that are not polished and might cause frame drops in low-end devices",
-  "@extraAnimationSettingDescription": {}
+  "@extraAnimationSettingDescription": {},
+  "clockStyleSettingGroup": "Clock Style",
+  "@clockStyleSettingGroup": {},
+  "clockTypeSetting": "Clock type",
+  "@clockTypeSetting": {},
+  "analogClock": "Analog",
+  "digitalClock": "Digital",
+  "showClockTicksSetting": "Show ticks",
+  "majorTicks": "Major ticks only",
+  "allTicks": "All ticks",
+  "showNumbersSetting": "Show numbers",
+  "quarterNumbers": "Quarter numbers only",
+  "allNumbers": "All numbers",
+  "none": "None",
+  "numeralTypeSetting": "Numeral type",
+  "romanNumeral": "Roman",
+  "arabicNumeral": "Arabic",
+  "showDigitalClock": "Show digital clock"
+
 }
