Add memory task game

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -369,7 +369,9 @@
   "@sequenceLengthSetting": {},
   "sequenceGridSizeSetting": "Grid size",
   "@sequenceGridSizeSetting": {},
-  "numberOfProblemsSetting": "Number of Problems",
+  "memoryTask": "Memory",
+  "numberOfPairsSetting": "Number of pairs",
+  "numberOfProblemsSetting": "Number of problems",
   "@numberOfProblemsSetting": {},
   "saveReminderAlert": "Do you want to leave without saving?",
   "@saveReminderAlert": {},
