Fix tamil translation

--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -515,11 +515,11 @@
   "@stopwatchFastest": {},
   "alarmDescriptionDays": "{days}",
   "@alarmDescriptionDays": {},
-  "alarmDescriptionRange": "{இடைவெளி, தேர்ந்தெடு, நாள்தோறும் {Daily} வாராந்திர {Weekly} பிற {Other}} {startDate} முதல் {endDate} வரை",
+  "alarmDescriptionRange": "{interval, select, daily {நாள்தோறும்} weekly {வாராந்திர} other {பிற}} {startDate} முதல் {endDate} வர ",
   "@alarmDescriptionRange": {},
   "stopwatchSlowest": "மெதுவாக",
   "@stopwatchSlowest": {},
-  "alarmDescriptionDates": "{date} {எண்ணிக்கை, பன்மை, = 0 {} = 1 { and 1 other date} பிற {மற்றும் {count} பிற தேதிகள்}}",
+  "alarmDescriptionDates": "{date}{count, plural, = 0 {} = 1 { and 1 other date} other {மற்றும் {count} பிற தேதிகள்}}",
   "@alarmDescriptionDates": {},
   "stopwatchAverage": "சராசரி",
   "@stopwatchAverage": {},
@@ -603,7 +603,7 @@
   "@sameTime": {},
   "addLengthSetting": "நீளம் சேர்க்கவும்",
   "@addLengthSetting": {},
-  "relativeTime": "{hours} h {உறவினர், தேர்ந்தெடுக்கவும், முன்னால் {ahead} பின்னால் {behind} பிற {Other}}",
+  "relativeTime": "{hours} h {relative, select, ahead {முன்னால்} behind {பின்னால்} other {பிற}}",
   "@relativeTime": {},
   "searchSettingPlaceholder": "ஒரு அமைப்பைத் தேடுங்கள்",
   "@searchSettingPlaceholder": {},
@@ -721,19 +721,19 @@
   "@translateDescription": {},
   "tagNamePlaceholder": "குறிச்சொல் பெயர்",
   "@tagNamePlaceholder": {},
-  "hoursString": "{எண்ணிக்கை, பன்மை, = 0 {} = 1 {1 hour} பிற {{count} மணிநேரம்}}",
+  "hoursString": "{count, plural, = 0 {} = 1 {1 hour} other {{count} மணிநேரம்}}",
   "@hoursString": {},
-  "minutesString": "{எண்ணிக்கை, பன்மை, = 0 {} = 1 {1 minute} பிற {{count} நிமிடங்கள்}}",
+  "minutesString": "{count, plural, = 0 {} = 1 {1 minute} other {{count} நிமிடங்கள்}}",
   "@minutesString": {},
-  "secondsString": "{எண்ணிக்கை, பன்மை, = 0 {} = 1 {1 second} பிற {{count} விநாடிகள்}}",
+  "secondsString": "{count, plural, = 0 {} = 1 {1 second} other {{count} விநாடிகள்}}",
   "@secondsString": {},
-  "weeksString": "{எண்ணிக்கை, பன்மை, = 0 {} = 1 {1 week} பிற {{count} வாரங்கள்}}",
+  "weeksString": "{count, plural, = 0 {} = 1 {1 week} other {{count} வாரங்கள்}}",
   "@weeksString": {},
-  "monthsString": "{எண்ணிக்கை, பன்மை, = 0 {} = 1 {1 month} பிற {{count} மாதங்கள்}}",
+  "monthsString": "{count, plural, = 0 {} = 1 {1 month} other {{count} மாதங்கள்}}",
   "@monthsString": {},
-  "daysString": "{எண்ணிக்கை, பன்மை, = 0 {} = 1 {1 day} பிற {{count} நாட்கள்}}",
+  "daysString": "{count, plural, = 0 {} = 1 {1 day} other {{count} நாட்கள்}}",
   "@daysString": {},
-  "yearsString": "{எண்ணிக்கை, பன்மை, = 0 {} = 1 {1 year} பிற {{count} ஆண்டுகள்}}",
+  "yearsString": "{count, plural, = 0 {} = 1 {1 year} other {{count} ஆண்டுகள்}}",
   "@yearsString": {},
   "lessThanOneMinute": "1 நிமிடத்திற்கும் குறைவாக",
   "@lessThanOneMinute": {},
