Add automatic material you theme for digital clock widget

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -775,5 +775,8 @@
   "arabicNumeral": "Arabic",
   "showDigitalClock": "Show digital clock",
   "backgroundServiceIntervalSetting": "Background service interval",
-  "backgroundServiceIntervalSettingDescription": "Lower interval will help keep the app alive, at the cost of some battery life"
+  "backgroundServiceIntervalSettingDescription": "Lower interval will help keep the app alive, at the cost of some battery life",
+  "custom": "Custom",
+  "app": "App",
+  "materialYou": "Material You"
 }
